# forbidden

./: MANIFEST.in  README.md  pyproject.toml
src/: forbidden.py  requirements.txt  stresser.py
src/forbidden/: forbidden.py
src/stresser/: stresser.py
